--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=password
 
+spring.jpa.hibernate.ddl-auto=create
